created email check function

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "[149 rows x 6 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "[149 rows x 8 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -718,13 +718,151 @@
        "[149 rows x 7 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "flex_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_list=[]\n",
+    "\n",
+    "def emailChecker():\n",
+    "\n",
+    "    for email in flex_df['Email']:\n",
+    "        if len(email[0])==0:\n",
+    "            email_list.append(0)\n",
+    "        else:\n",
+    "            email_list.append(email[0])\n",
+    "            \n",
+    "emailChecker()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Emergency Contact</th>\n",
+       "      <th>Phone1</th>\n",
+       "      <th>Phone2</th>\n",
+       "      <th>new_Email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>07753247043</td>\n",
+       "      <td>01403 217625</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01392 251 991</td>\n",
+       "      <td>07714 752 368</td>\n",
+       "      <td>simonpapworth6742@hotmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>jon@demo.mcm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01344412310</td>\n",
+       "      <td>07789755766</td>\n",
+       "      <td>j@a.f</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  FirstName   Last Name Room  Emergency Contact         Phone1         Phone2  \\\n",
+       "0     Carol  Greenhouse  D01               True    07753247043   01403 217625   \n",
+       "1     Carol  Greenhouse  D01              False              0              0   \n",
+       "2     Carol  Greenhouse  D01              False  01392 251 991  07714 752 368   \n",
+       "3     Carol  Greenhouse  D01              False              0              0   \n",
+       "4     Carol  Greenhouse  D01              False    01344412310    07789755766   \n",
+       "\n",
+       "                       new_Email  \n",
+       "0                              0  \n",
+       "1                              0  \n",
+       "2  simonpapworth6742@hotmail.com  \n",
+       "3                   jon@demo.mcm  \n",
+       "4                          j@a.f  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flex_df['new_Email']= email_list\n",
+    "del flex_df['Email']\n",
+    "flex_df.head()"
    ]
   },
   {
@@ -751,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
