--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -743,15 +743,15 @@
     "        else:\n",
     "            email_list.append(email[0])\n",
     "            \n",
-    "emailChecker()\n",
-    "\n",
-    "\n"
+    "emailChecker()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -780,7 +780,7 @@
        "      <th>Emergency Contact</th>\n",
        "      <th>Phone1</th>\n",
        "      <th>Phone2</th>\n",
-       "      <th>new_Email</th>\n",
+       "      <th>Email</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -834,6 +834,301 @@
        "      <td>07789755766</td>\n",
        "      <td>j@a.f</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>06666491597</td>\n",
+       "      <td>0</td>\n",
+       "      <td>s.papworth1@pcsw.care</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>sqr@demo.mcm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>relative@clevercare.mcm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nicola.bond@hotmail.co.uk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01264 213 123</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alex.Trompetus@GPPratice.co.uk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>07753247043</td>\n",
+       "      <td>01403 217625</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01392 251 991</td>\n",
+       "      <td>07714 752 368</td>\n",
+       "      <td>simonpapworth6742@hotmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>jon@demo.mcm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01344412310</td>\n",
+       "      <td>07789755766</td>\n",
+       "      <td>j@a.f</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FirstName   Last Name Room  Emergency Contact         Phone1  \\\n",
+       "0      Carol  Greenhouse  D01               True    07753247043   \n",
+       "1      Carol  Greenhouse  D01              False              0   \n",
+       "2      Carol  Greenhouse  D01              False  01392 251 991   \n",
+       "3      Carol  Greenhouse  D01              False              0   \n",
+       "4      Carol  Greenhouse  D01              False    01344412310   \n",
+       "5      Carol  Greenhouse  D01              False    06666491597   \n",
+       "6      Carol  Greenhouse  D01               True              0   \n",
+       "7      Carol  Greenhouse  D01              False              0   \n",
+       "8      Carol  Greenhouse  D01               True              0   \n",
+       "9      Carol  Greenhouse  D01              False  01264 213 123   \n",
+       "10     Carol  Greenhouse  D01               True    07753247043   \n",
+       "11     Carol  Greenhouse  D01              False              0   \n",
+       "12     Carol  Greenhouse  D01              False  01392 251 991   \n",
+       "13     Carol  Greenhouse  D01              False              0   \n",
+       "14     Carol  Greenhouse  D01              False    01344412310   \n",
+       "\n",
+       "           Phone2                           Email  \n",
+       "0    01403 217625                               0  \n",
+       "1               0                               0  \n",
+       "2   07714 752 368   simonpapworth6742@hotmail.com  \n",
+       "3               0                    jon@demo.mcm  \n",
+       "4     07789755766                           j@a.f  \n",
+       "5               0           s.papworth1@pcsw.care  \n",
+       "6               0                    sqr@demo.mcm  \n",
+       "7               0         relative@clevercare.mcm  \n",
+       "8               0       nicola.bond@hotmail.co.uk  \n",
+       "9               0  Alex.Trompetus@GPPratice.co.uk  \n",
+       "10   01403 217625                               0  \n",
+       "11              0                               0  \n",
+       "12  07714 752 368   simonpapworth6742@hotmail.com  \n",
+       "13              0                    jon@demo.mcm  \n",
+       "14    07789755766                           j@a.f  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del flex_df['Email']\n",
+    "flex_df['Email']= email_list\n",
+    "flex_df.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mobile_list = []\n",
+    "landline_list = []\n",
+    "\n",
+    "def telephoneChecker():\n",
+    "    for index, row in flex_df.iterrows():\n",
+    "# 0,0\n",
+    "        if row['Phone1'] == 0:\n",
+    "            mobile_list.append(\"Check Mobile\")\n",
+    "            landline_list.append(\"Check Landline\")\n",
+    "# Mobile + ?\n",
+    "        elif re.search(\"^07\", row['Phone1']) is not None:\n",
+    "            if row['Phone2'] == 0:\n",
+    "# Mobile + 0\n",
+    "                mobile_list.append(row['Phone1'])\n",
+    "                landline_list.append(\"Check Landline\")\n",
+    "# Mobile + Landline (or Mobile2)\n",
+    "            else:\n",
+    "                mobile_list.append(row['Phone1'])\n",
+    "                landline_list.append(row['Phone2'])  \n",
+    "        else:\n",
+    "# Landline + ?\n",
+    "            if row['Phone2'] == 0:\n",
+    "# Landline + 0\n",
+    "                landline_list.append(row['Phone1'])\n",
+    "                mobile_list.append(\"Check Mobile\")\n",
+    "# Landline + Mobile (or Landline2)\n",
+    "            else:\n",
+    "                landline_list.append(row['Phone1'])\n",
+    "                mobile_list.append(row['Phone2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "telephoneChecker()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Emergency Contact</th>\n",
+       "      <th>Phone1</th>\n",
+       "      <th>Phone2</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Mobile</th>\n",
+       "      <th>Landline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>True</td>\n",
+       "      <td>07753247043</td>\n",
+       "      <td>01403 217625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>07753247043</td>\n",
+       "      <td>01403 217625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Check Mobile</td>\n",
+       "      <td>Check Landline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01392 251 991</td>\n",
+       "      <td>07714 752 368</td>\n",
+       "      <td>simonpapworth6742@hotmail.com</td>\n",
+       "      <td>07714 752 368</td>\n",
+       "      <td>01392 251 991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>jon@demo.mcm</td>\n",
+       "      <td>Check Mobile</td>\n",
+       "      <td>Check Landline</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Carol</td>\n",
+       "      <td>Greenhouse</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>False</td>\n",
+       "      <td>01344412310</td>\n",
+       "      <td>07789755766</td>\n",
+       "      <td>j@a.f</td>\n",
+       "      <td>07789755766</td>\n",
+       "      <td>01344412310</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -846,23 +1141,34 @@
        "3     Carol  Greenhouse  D01              False              0              0   \n",
        "4     Carol  Greenhouse  D01              False    01344412310    07789755766   \n",
        "\n",
-       "                       new_Email  \n",
-       "0                              0  \n",
-       "1                              0  \n",
-       "2  simonpapworth6742@hotmail.com  \n",
-       "3                   jon@demo.mcm  \n",
-       "4                          j@a.f  "
+       "                           Email         Mobile        Landline  \n",
+       "0                              0    07753247043    01403 217625  \n",
+       "1                              0   Check Mobile  Check Landline  \n",
+       "2  simonpapworth6742@hotmail.com  07714 752 368   01392 251 991  \n",
+       "3                   jon@demo.mcm   Check Mobile  Check Landline  \n",
+       "4                          j@a.f    07789755766     01344412310  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flex_df['new_Email']= email_list\n",
-    "del flex_df['Email']\n",
+    "flex_df['Mobile'] = mobile_list\n",
+    "flex_df['Landline'] = landline_list\n",
+    "# del flex_df['Phone1']\n",
+    "# del flex_df['Phone2']\n",
     "flex_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flex_df.to_csv(r'flex.csv')"
    ]
   },
   {
@@ -889,7 +1195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
